# rust-mongo-microservice

./: Cargo.toml
lib/: sample.txt
src/: main.rs
